fixed css for line spacing

--- a/Develop/style.css
+++ b/Develop/style.css
@@ -13,15 +13,6 @@ textarea{
   padding: 10px;
 }
 
-footer{
-  margin-top: 5rem;
-}
-
-span{
-  width: 5.75rem;
-  justify-content: center;
-}
-
 .jumbotron {
   text-align: center;
   background-color: transparent;
